--- a/views/index.hbs
+++ b/views/index.hbs
@@ -43,7 +43,7 @@
       <div class="row">
         <div class="small-12 columns">
 		 <h1>2016嵌入式專題實作</h1>
-          <h1>基於ARM mbed 物聯網平台應用實作</h1>
+          <h1>基於ARM mbed 物聯網平台應用實作</h1>  <h1>組員:::</h1>
         </div>
       </div>
     </div>
